# sstn

./: Cargo.toml  LICENSE  README.md  pyproject.toml
notebooks/: benchmark.ipynb  example.ipynb
src/: io.rs  lib.rs  norm.rs  set.rs
sstn/: __init__.py  core.py
